added authentication with api key and basic auth
